--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/navigation_home">
 
     <fragment
-        android:id="@+id/mainFragment"
+        android:id="@+id/navigation_home"
         android:name="com.kangtong.btgtouristregister.view.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" />
     <fragment
-        android:id="@+id/toolFragment"
+        android:id="@+id/navigation_dashboard"
         android:name="com.kangtong.btgtouristregister.view.tool.ToolFragment"
         android:label="fragment_tool_list"
         tools:layout="@layout/fragment_tool_list" />
