--- a/app/src/main/res/layout/activity_tourist.xml
+++ b/app/src/main/res/layout/activity_tourist.xml
@@ -64,14 +64,14 @@
                         style="@style/Tourist"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:text="@string/name" />
 
                     <TextView
                         android:id="@+id/text_name"
                         style="@style/Tourist"
                         android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:text="@string/none"
 
                         android:layout_columnWeight="1" />
@@ -80,7 +80,7 @@
                         style="@style/Tourist"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
 
                         android:text="@string/id_card_number" />
 
@@ -88,7 +88,7 @@
                         android:id="@+id/text_number"
                         style="@style/Tourist"
                         android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:text="@string/none"
 
                         android:layout_columnWeight="1" />
@@ -97,7 +97,7 @@
                         style="@style/Tourist"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
 
                         android:text="@string/sex" />
 
@@ -105,7 +105,7 @@
                         android:id="@+id/text_sex"
                         style="@style/Tourist"
                         android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:text="@string/none"
 
                         android:layout_columnWeight="1" />
@@ -114,7 +114,7 @@
                         style="@style/Tourist"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
 
                         android:text="@string/birthday" />
 
@@ -122,7 +122,7 @@
                         android:id="@+id/text_birthday"
                         style="@style/Tourist"
                         android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:text="@string/none"
                         android:layout_columnWeight="1" />
                 </GridLayout>
