--- a/app/src/main/res/layout/content_tourist.xml
+++ b/app/src/main/res/layout/content_tourist.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,4 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</androidx.core.widget.NestedScrollView>
+    <TextView
+        android:id="@+id/text_none_tourist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/none_guide"
+        android:textAlignment="center" />
+
+</FrameLayout>
