--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,10 +19,10 @@
 
     <style name="Tourist">
         <item name="android:textColor">@color/primary_text</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">22sp</item>
         <item name="android:gravity">center</item>
         <item name="android:text">@string/none</item>
-        <item name="android:layout_margin">2dp</item>
+        <item name="android:padding">2dp</item>
     </style>
 
     <style name="tool_frg_top_tab_style">
