--- a/app/src/main/res/layout/content_tourist.xml
+++ b/app/src/main/res/layout/content_tourist.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/none_guide"
+        android:text="@string/none_tourist"
         android:textAlignment="center" />
 
 </FrameLayout>
